force-app/main/default/objects/Callista_Citizenship_Type__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>select * from CITIZENSHIP_TYPE where closed_ind = &apos;N&apos; order by  explanation</description>
    <fields>
        <fullName>Campus_of_Study__c</fullName>
        <label>Campus of Study</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Explanation__c</fullName>
        <label>Explanation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Callista Citizenship Type</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Description__c</columns>
        <columns>Explanation__c</columns>
        <columns>Campus_of_Study__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>